Remove more clang32 packages.

--- a/mingw-w64-libjpeg-turbo/PKGBUILD
+++ b/mingw-w64-libjpeg-turbo/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.0.4
 pkgrel=2
 pkgdesc="JPEG image codec with accelerated baseline compression and decompression (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libjpeg-turbo.virtualgl.org/"
 msys2_repository_url="https://github.com/libjpeg-turbo/libjpeg-turbo"
 msys2_pgp_keys_url="https://libjpeg-turbo.org/Downloads/DigitalSignatures"
