--- a/mingw-w64-pdcurses/PKGBUILD
+++ b/mingw-w64-pdcurses/PKGBUILD
@@ -14,7 +14,7 @@ pkgdesc="Curses library on the Win32 API (mingw-w64)"
 # ports that are available with this package
 _pdcports="wincon wingui vt"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.projectpluto.com/win32a.htm"
 msys2_repository_url="https://github.com/Bill-Gray/PDCursesMod"
 license=('Public Domain')
