--- a/mingw-w64-pkg-config/PKGBUILD
+++ b/mingw-w64-pkg-config/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.29.2
 pkgrel=6
 pkgdesc="A system for managing library compile/link flags (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
 msys2_references=(
   'archlinux'
   'aur'
