--- a/mingw-w64-serd/PKGBUILD
+++ b/mingw-w64-serd/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.32.2
 pkgrel=1
 pkgdesc='C library for RDF syntax supporting reading/ writing Turtle and NTriples (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: serd'
 )
