--- a/mingw-w64-vala/PKGBUILD
+++ b/mingw-w64-vala/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.56.17
 pkgrel=1
 pkgdesc="Compiler for the GObject type system (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wiki.gnome.org/Projects/Vala"
 msys2_references=(
   "cpe: cpe:/a:gnome:vala"
