--- a/mingw-w64-graphviz/PKGBUILD
+++ b/mingw-w64-graphviz/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=12.2.0
 pkgrel=1
 pkgdesc="Graph Visualization Software (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.graphviz.org/'
 msys2_repository_url="https://gitlab.com/graphviz/graphviz"
 msys2_references=(
