--- a/mingw-w64-keystone/PKGBUILD
+++ b/mingw-w64-keystone/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.9.2
 pkgrel=5
 pkgdesc="Lightweight multi-platform, multi-architecture assembler framework (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc"
