--- a/mingw-w64-lerc/PKGBUILD
+++ b/mingw-w64-lerc/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.0.0
 pkgrel=1
 pkgdesc="Limited Error Raster Compression library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/Esri/lerc"
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
