--- a/mingw-w64-libdatrie/PKGBUILD
+++ b/mingw-w64-libdatrie/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.2.13
 pkgrel=3
 pkgdesc="Implementation of double-array structure for representing trie, as proposed by Junichi Aoe. (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://linux.thai.net/projects/datrie'
 license=('LGPL')
 depends=("${MINGW_PACKAGE_PREFIX}-libiconv")
