--- a/mingw-w64-libthai/PKGBUILD
+++ b/mingw-w64-libthai/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.1.29
 pkgrel=3
 pkgdesc="Thai language support routines (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://linux.thai.net/projects/libthai"
 msys2_references=(
   "cpe: cpe:/a:linux.thai:libthai"
