--- a/mingw-w64-libwebp/PKGBUILD
+++ b/mingw-w64-libwebp/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.4.0
 pkgrel=1
 pkgdesc="A library to encode and decode images in WebP format (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://developers.google.com/speed/webp/'
 msys2_references=(
   "cpe: cpe:/a:webmproject:libwebp"
