--- a/mingw-w64-putty-ssh/PKGBUILD
+++ b/mingw-w64-putty-ssh/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=0.0
 pkgrel=4
 pkgdesc="A wrapper around plink with some nice features (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="http://www.wischik.com/lu/programmer/unison-ssh.html"
 license=('unknown')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
