--- a/mingw-w64-putty/PKGBUILD
+++ b/mingw-w64-putty/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=0.81
 pkgrel=1
 pkgdesc="A free telnet/SSH client (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.chiark.greenend.org.uk/~sgtatham/putty/"
 msys2_references=(
   "cpe: cpe:/a:putty:putty"
