--- a/mingw-w64-python-isodate/PKGBUILD
+++ b/mingw-w64-python-isodate/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=4
 pkgdesc="An ISO 8601 date/time/duration parser and formatter"
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: isodate'
 )
