--- a/mingw-w64-python-rdflib/PKGBUILD
+++ b/mingw-w64-python-rdflib/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=7.0.0
 pkgrel=3
 pkgdesc='A Python library for working with RDF, a simple yet powerful language for representing information (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: rdflib'
   "cpe: cpe:/a:rdflib_project:rdflib"
