--- a/mingw-w64-python-setuptools/PKGBUILD
+++ b/mingw-w64-python-setuptools/PKGBUILD
@@ -4,42 +4,44 @@
 _realname=setuptools
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}"
-           "${MINGW_PACKAGE_PREFIX}-python2-setuptools<42.0.2")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=75.3.0
+pkgver=75.6.0
 pkgrel=1
 pkgdesc="Easily download, build, install, upgrade, and uninstall Python packages (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+url="https://github.com/pypa/setuptools"
 msys2_references=(
   'pypi: setuptools'
   "cpe: cpe:/a:python:setuptools"
 )
 license=('spdx:MIT')
-url="https://github.com/pypa/setuptools"
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
+if [[ ${CARCH} != i686 ]]; then
 checkdepends=(
-  "${MINGW_PACKAGE_PREFIX}-python-pytest"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-checkdocs"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-flake8"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-cov"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-enabler"
-  "${MINGW_PACKAGE_PREFIX}-python-mock"
-  "${MINGW_PACKAGE_PREFIX}-python-virtualenv"
-  "${MINGW_PACKAGE_PREFIX}-python-pip"
+  "${MINGW_PACKAGE_PREFIX}-python-filelock"
+  #"${MINGW_PACKAGE_PREFIX}-python-ini2toml"
+  #"${MINGW_PACKAGE_PREFIX}-python-jaraco.develop"
   "${MINGW_PACKAGE_PREFIX}-python-jaraco.envs"
+  "${MINGW_PACKAGE_PREFIX}-python-jaraco.path"
+  #"${MINGW_PACKAGE_PREFIX}-python-jaraco.test"
+  "${MINGW_PACKAGE_PREFIX}-python-packaging"
+  "${MINGW_PACKAGE_PREFIX}-python-pip"
+  "${MINGW_PACKAGE_PREFIX}-python-pyproject-hooks"
+  "${MINGW_PACKAGE_PREFIX}-python-pytest"
+  #"${MINGW_PACKAGE_PREFIX}-python-pytest-home"
+  #"${MINGW_PACKAGE_PREFIX}-python-pytest-perf"
+  "${MINGW_PACKAGE_PREFIX}-python-pytest-subprocess"
+  "${MINGW_PACKAGE_PREFIX}-python-pytest-timeout"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-xdist"
-  "${MINGW_PACKAGE_PREFIX}-python-sphinx"
-  "${MINGW_PACKAGE_PREFIX}-python-jaraco.path" 
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-black"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-fixture-config"
+  "${MINGW_PACKAGE_PREFIX}-python-tomli-w"
+  "${MINGW_PACKAGE_PREFIX}-python-virtualenv"
+  "${MINGW_PACKAGE_PREFIX}-python-wheel"
   'git'
 )
+fi
 options=(!strip)
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         '0001-mingw-python-fix.patch'
@@ -51,7 +53,7 @@ source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realna
         '0009-launcher-revert-symlink-resolve.patch'
         '0010-support-py_limited_api.patch'
         '0011-add-support-for-windmc.patch')
-sha256sums=('fba5dd4d766e97be1b1681d98712680ae8f2f26d7881245f2ce9e40714f1a686'
+sha256sums=('8199222558df7c86216af4f84c30e9b34a61d8ba19366cc914424cdbd28252f6'
             '7b196884ac0151801f9638dabbf9a789fa9070a3b07a4c9e625c5523e8d47387'
             'fa54581e3dddb9f4edd332dedbc101f48939a9ca5878e13cf9cf9b3408bc8c22'
             '39503256652c7c23ce07e26539e8123d269eb5c09f5d9b07e5784b2d7fb8c96f'
