Remove some more clang32 packages (image formats, fonts)

--- a/mingw-w64-capstone/PKGBUILD
+++ b/mingw-w64-capstone/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=2
 pkgdesc='Lightweight multi-platform, multi-architecture disassembly framework (mingw-w64)'
 url='https://www.capstone-engine.org/index.html'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
