--- a/mingw-w64-fontconfig/PKGBUILD
+++ b/mingw-w64-fontconfig/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.15.0
 pkgrel=2
 pkgdesc="A library for configuring and customizing font access (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wiki.freedesktop.org/www/Software/fontconfig/"
 msys2_repository_url="https://gitlab.freedesktop.org/fontconfig/fontconfig"
 msys2_references=(
