--- a/mingw-w64-harfbuzz/PKGBUILD
+++ b/mingw-w64-harfbuzz/PKGBUILD
@@ -12,7 +12,7 @@ pkgver=10.1.0
 pkgrel=1
 pkgdesc="OpenType text shaping engine"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/harfbuzz/harfbuzz"
 msys2_references=(
   "archlinux: harfbuzz"
