--- a/mingw-w64-python-markdown/PKGBUILD
+++ b/mingw-w64-python-markdown/PKGBUILD
@@ -10,7 +10,7 @@ url='https://python-markdown.github.io'
 msys2_repository_url='https://github.com/Python-Markdown/markdown'
 license=('spdx:BSD-3-Clause')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: Markdown'
 )
