--- a/mingw-w64-cairo/PKGBUILD
+++ b/mingw-w64-cairo/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=1.18.2
 pkgrel=1
 pkgdesc="Cairo vector graphics library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://cairographics.org/"
 msys2_references=(
   "cpe: cpe:2.3:a:cairographics:cairo"
