--- a/mingw-w64-graphite2/PKGBUILD
+++ b/mingw-w64-graphite2/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.3.14
 pkgrel=3
 pkgdesc="Font rendering capabilities for complex non-Roman writing systems (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: graphite'
   "cpe: cpe:/a:sil:graphite2"
