--- a/mingw-w64-python-cattrs/PKGBUILD
+++ b/mingw-w64-python-cattrs/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=24.1.2
 pkgrel=2
 pkgdesc='Complex custom class converters for attrs (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: cattrs'
 )
