--- a/mingw-w64-python-fonttools/PKGBUILD
+++ b/mingw-w64-python-fonttools/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.54.1
 pkgrel=2
 pkgdesc="Converts OpenType and TrueType fonts to and from XML (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-fonttools'
   'pypi: fonttools'
