--- a/mingw-w64-python-mako/PKGBUILD
+++ b/mingw-w64-python-mako/PKGBUILD
@@ -12,7 +12,7 @@ pkgver=1.3.5
 pkgrel=3
 pkgdesc="A super-fast templating language that borrows the best ideas from the existing templating languages (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.makotemplates.org/"
 license=('spdx:MIT')
 msys2_references=(
