--- a/mingw-w64-pixman/PKGBUILD
+++ b/mingw-w64-pixman/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.44.0
 pkgrel=1
 pkgdesc="The pixel-manipulation library for X and cairo (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.freedesktop.org/pixman/pixman"
 msys2_references=(
   'cpe: cpe:/a:pixman:pixman'
