cmake: update to 3.31.1

--- a/mingw-w64-cmake/PKGBUILD
+++ b/mingw-w64-cmake/PKGBUILD
@@ -9,7 +9,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
            "${MINGW_PACKAGE_PREFIX}-${_realname}-cmcldeps" \
            "${MINGW_PACKAGE_PREFIX}-${_realname}-gui" \
            "${MINGW_PACKAGE_PREFIX}-${_realname}-docs"))
-pkgver=3.31.0
+pkgver=3.31.1
 _rc=""
 _pkgver=${pkgver}${_rc}
 pkgrel=1
@@ -25,15 +25,15 @@ msys2_references=(
 license=("spdx:MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake-bootstrap"
-             "${MINGW_PACKAGE_PREFIX}-python-sphinx"
              "${MINGW_PACKAGE_PREFIX}-bzip2"
-             "${MINGW_PACKAGE_PREFIX}-ncurses"
-             "${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-xz"
              "${MINGW_PACKAGE_PREFIX}-zstd"
              $([[ ${CARCH} == i686 ]] || echo \
                "${MINGW_PACKAGE_PREFIX}-emacs" \
                "${MINGW_PACKAGE_PREFIX}-fc" \
+               "${MINGW_PACKAGE_PREFIX}-ncurses" \
+               "${MINGW_PACKAGE_PREFIX}-python" \
+               "${MINGW_PACKAGE_PREFIX}-python-sphinx" \
                "${MINGW_PACKAGE_PREFIX}-qt6-base" \
                "${MINGW_PACKAGE_PREFIX}-qt6-tools"))
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
@@ -52,7 +52,7 @@ source=("https://github.com/Kitware/CMake/releases/download/v${_pkgver}/${_realn
         "0002-Do-not-install-Qt-bundle-in-cmake-gui.patch"
         "0003-fix-find-python-on-mingw-aarch64.patch"
         "0005-Default-to-ninja-generator.patch")
-sha256sums=('300b71db6d69dcc1ab7c5aae61cbc1aa2778a3e00cbd918bc720203e311468c3'
+sha256sums=('c4fc2a9bd0cd5f899ccb2fb81ec422e175090bc0de5d90e906dd453b53065719'
             '25793edcbac05bb6d17fa9947b52ace4a6b5ccccf7758e22ae9ae022ed089061'
             'f6cf6a6f2729db2b9427679acd09520af2cd79fc26900b19a49cead05a55cd1a'
             '557b5cbc05d4d50b3a67a7892391fcaa5cd95c492cdb4338d86305d1f4a3b88a'
@@ -95,16 +95,23 @@ build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   declare -a _extra_config
-
   if check_option "debug" "n"; then
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
+
   if [[ ${CARCH} != i686 ]]; then
     export PATH=${MINGW_PREFIX}/share/qt6/bin:$PATH
-    _extra_config+=("-DSPHINX_HTML=ON" "-DSPHINX_QTHELP=ON" "-DBUILD_QtDialog=ON" "-DBUILD_CursesDialog=ON")
+    _extra_config+=(
+      "-DSPHINX_HTML=ON"
+      "-DSPHINX_MAN=ON"
+      "-DSPHINX_QTHELP=ON"
+      "-DBUILD_QtDialog=ON"
+      "-DBUILD_CursesDialog=ON"
+      "-DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python")
   fi
+
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe -Wno-dev \
     -GNinja \
@@ -116,9 +123,7 @@ build() {
     -DCMAKE_MAN_DIR=share/man \
     -DCMAKE_INFO_DIR=share/info \
     -DCMAKE_USE_SYSTEM_LIBRARIES=ON \
-    -DSPHINX_MAN=ON \
     -DBUILD_TESTING=OFF \
-    -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
     ../${_realname}-${_pkgver}
   ${MINGW_PREFIX}/bin/cmake.exe --build .
 }
