--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -12,13 +12,11 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-python3-cx_Freeze"
            "${MINGW_PACKAGE_PREFIX}-python-cx_Freeze")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-cx_Freeze"
           "${MINGW_PACKAGE_PREFIX}-python-cx_Freeze")
-pkgver=7.2.5
+pkgver=7.2.6
 pkgrel=1
 pkgdesc="Creates standalone executables from Python scripts, with the same performance (mingw-w64)"
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=(
-    '63f9b745b8a84a1c3ce986d089f3d750ec65b9ff385ed64308c073a821d81eef'
-)
+sha256sums=('68d0d7eb52f88bfd32716269279b989dfd1635fa871506ac50904af831837555')
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
 msys2_references=(
