tuxpaint: update to 0.9.34

--- a/mingw-w64-tuxpaint/PKGBUILD
+++ b/mingw-w64-tuxpaint/PKGBUILD
@@ -4,14 +4,13 @@ _realname=tuxpaint
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=0.9.32
+pkgver=0.9.34
 pkgrel=1
 pkgdesc='Drawing program designed for young children (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://tuxpaint.org/'
 license=('spdx:GPL-2.0-only')
-backup=("${MINGW_PREFIX:1}/etc/tuxpaint/tuxpaint.conf")
 depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
          "${MINGW_PACKAGE_PREFIX}-zlib"
@@ -29,46 +28,40 @@ depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-SDL2_pango"
          "${MINGW_PACKAGE_PREFIX}-SDL2_ttf")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-gperf"
              "${MINGW_PACKAGE_PREFIX}-imagemagick"
              "${MINGW_PACKAGE_PREFIX}-libpaper"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools")
 options=('!emptydirs')
-optdepends=("${MINGW_PACKAGE_PREFIX}-python2: zh_tw font generator script"
-            #"${MINGW_PACKAGE_PREFIX}-tuxpaint-stamps: more stamps"
+optdepends=(#"${MINGW_PACKAGE_PREFIX}-tuxpaint-stamps: more stamps"
             #"${MINGW_PACKAGE_PREFIX}-tuxpaint-config: configuration manager"
-            "${MINGW_PACKAGE_PREFIX}-fontforge: zh_tw doc generator script"
-            'bash: for tp-magic-config, tuxpaint-import, zh_tw doc generator scripts')
+            "${MINGW_PACKAGE_PREFIX}-fontforge: zh_tw doc generator script")
 source=("https://downloads.sourceforge.net/sourceforge/tuxpaint/${_realname}-${pkgver}.tar.gz"
         "001-makefile.patch")
-sha256sums=('09cce22241481dc1360fc4bc5d4da1d31815d7a2563b9e9fa217a672ba974bf2'
-            '9ddc1f7ad6102867ab3eb36573f64ae14fed96130adbd514357b406a14c236d7')
+sha256sums=('b761df5ed386a9e04a6809ab3e0cbf2126f10b770527cb2b5f190ff5e370ed03'
+            'a9f6428c6e23c9869db450999e6181a487dd9ec36070a1c8bc5cd69b8ff41e85')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
   tar -xzf "${_realname}-${pkgver}.tar.gz" || true
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   patch -Np1 -i "${srcdir}/001-makefile.patch"
-
-  for _f in docs/outdated/zh_tw/mkTuxpaintIM.py fonts/locale/zh_tw_docs/maketuxfont.py; do
-    sed -i '0,/python$/s//python2/' $_f
-  done
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-
-  make PREFIX="${MINGW_PREFIX}" \
+  make -C "${_realname}-${pkgver}"\
+    PREFIX="${MINGW_PREFIX}" \
     LDFLAGS="${LDFLAGS}" \
     OPTFLAGS="${CFLAGS} -ffast-math" FASTMATH="${CFLAGS} -ffast-math" \
     all
 }
 
 package_tuxpaint() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  backup=("${MINGW_PREFIX:1}/etc/tuxpaint/tuxpaint.conf")
 
-  make \
+  make -C "${_realname}-${pkgver}" \
     PREFIX="${MINGW_PREFIX}" \
     GNOME_PREFIX="${MINGW_PREFIX}" \
     COMPLETIONDIR="${pkgdir}${MINGW_PREFIX}/share/bash-completion/completions" \
@@ -81,7 +74,9 @@ package_tuxpaint() {
 }
 
 package_tuxpaint-docs() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  pkgdesc+=" (Documentation)"
+  depends=()
+  optdepends=()
 
   mv dest/* "${pkgdir}"
 }
