Drop Python2 on CLANG64 and UCRT64.

--- a/mingw-w64-python2/PKGBUILD
+++ b/mingw-w64-python2/PKGBUILD
@@ -10,7 +10,7 @@ pkgrel=8
 _pybasever=${pkgver%.*}
 pkgdesc="A high-level scripting language (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64')
 license=('spdx:PSF-2.0')
 url="https://www.python.org/"
 msys2_references=(
