--- a/mingw-w64-python2-pip/PKGBUILD
+++ b/mingw-w64-python2-pip/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=20.3.4
 pkgrel=1
 pkgdesc="An easy_install replacement for installing pypi python packages (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64')
 url="https://pip.pypa.io/"
 msys2_references=(
   "cpe: cpe:/a:pypa:pip"
