--- a/mingw-w64-python2-pycairo/PKGBUILD
+++ b/mingw-w64-python2-pycairo/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.18.2
 pkgrel=4
 pkgdesc="Python bindings for the cairo graphics library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64')
 url="https://pycairo.readthedocs.io"
 msys2_references=(
   'aur'
