wxwidgets: Fix build with clang-19
- Link to system pcre2.
- Use system curl.
- Explicit dependencies.
- libsecret is not used on Windows.

--- a/mingw-w64-wxwidgets3.2/PKGBUILD
+++ b/mingw-w64-wxwidgets3.2/PKGBUILD
@@ -15,7 +15,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-common"
            "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-gtk3-libs" \
            "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-gtk3"))
 pkgver=${_wx_basever}.6
-pkgrel=1
+pkgrel=2
 pkgdesc="A C++ library that lets developers create applications for Windows, Linux and UNIX (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,39 +26,61 @@ msys2_references=(
 )
 license=('spdx:wxWindows')
 makedepends=(
-  "${MINGW_PACKAGE_PREFIX}-autotools"
-  "${MINGW_PACKAGE_PREFIX}-libpng"
-  "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
-  "${MINGW_PACKAGE_PREFIX}-libtiff"
   "${MINGW_PACKAGE_PREFIX}-cc"
-  "${MINGW_PACKAGE_PREFIX}-gtk3"
+  "${MINGW_PACKAGE_PREFIX}-autotools"
   "${MINGW_PACKAGE_PREFIX}-pkgconf"
-  "${MINGW_PACKAGE_PREFIX}-libsecret"
+  "${MINGW_PACKAGE_PREFIX}-python"
+  "${MINGW_PACKAGE_PREFIX}-curl"
+  $([[ ${CARCH} == i686 ]] || echo \
+    "${MINGW_PACKAGE_PREFIX}-cairo" \
+    "${MINGW_PACKAGE_PREFIX}-gspell" \
+    "${MINGW_PACKAGE_PREFIX}-gtk3")
+  "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
   "${MINGW_PACKAGE_PREFIX}-libnotify"
+  "${MINGW_PACKAGE_PREFIX}-libpng"
+  "${MINGW_PACKAGE_PREFIX}-libtiff"
   "${MINGW_PACKAGE_PREFIX}-pcre2"
+  "${MINGW_PACKAGE_PREFIX}-zlib"
 )
 #options=('!strip' 'debug') # Best options for debugging CodeLite crashes
 source=(
   https://github.com/wxWidgets/wxWidgets/releases/download/v${pkgver}${_wx_buildver}/${_realname}-${pkgver}${_wx_buildver}.tar.bz2
-
   # This patch is a MSys2 run-time patch
   001-wxWidgets-3.0.2-relocate-prefix-in-bin-wx-config.patch
-
+  002-fix-build-with-libcxx-19.patch::https://github.com/wxWidgets/wxWidgets/pull/24959.patch
+  003-fix-build-with-clang-19.patch::https://github.com/wxWidgets/wxWidgets/commit/c70a281c.patch
   # the wxTeam rejected this patch
   005-wxWidgets-3.1.3-Remove-WX_LIBS_STATIC-from-m4.patch
 )
 sha256sums=('939e5b77ddc5b6092d1d7d29491fe67010a2433cf9b9c0d841ee4d04acb9dce7'
             '2b3b183a6a76ad539abc49a41033aa923c13b395c0e55189ba962068781c7135'
+            '1742bf4ee14d540d3bd8097df4a250def4aeface9ba12c4677a6efb022b9b71d'
+            '2b7d525e19e8b565f553327d8b6077a61874f55bbc4ae16c948b4724e48b778b'
             '4a4828f0c9cdc638cffde6a30b5dfb14283719acc9e89e19de8ec2d5a80a5aec')
+
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
+
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}${_wx_buildver}
 
   # Fix MSys2 Run-Time wx-config bug.
-  patch -p1 -i "${srcdir}"/001-wxWidgets-3.0.2-relocate-prefix-in-bin-wx-config.patch
+  apply_patch_with_msg \
+    001-wxWidgets-3.0.2-relocate-prefix-in-bin-wx-config.patch
+
+  apply_patch_with_msg \
+    002-fix-build-with-libcxx-19.patch \
+    003-fix-build-with-clang-19.patch
 
   # This patch is not really needed; but, WX_LIBS_STATIC does not work correctly under MSys2
   # Removed it to see if anything breaks or if anything is fixed.
-  patch -p1 -i "${srcdir}"/005-wxWidgets-3.1.3-Remove-WX_LIBS_STATIC-from-m4.patch
+  apply_patch_with_msg \
+    005-wxWidgets-3.1.3-Remove-WX_LIBS_STATIC-from-m4.patch
 }
 
 build() {
@@ -134,13 +156,15 @@ build() {
     --disable-precomp-headers \
     --with-gtk=3 \
     --with-cxx=17 \
-    --with-libpng=sys \
-    --with-libjpeg=sys \
-    --with-libtiff=sys \
-    --with-zlib=sys \
     --with-expat=sys \
-    --with-regex=builtin \
+    --with-libjpeg=sys \
+    --with-libpng=sys \
+    --with-libtiff=sys \
+    --with-regex=sys \
+    --with-zlib=sys \
+    --with-libcurl \
     --with-liblzma \
+    --with-winhttp \
     --without-opengl
 
   make #VERBOSE=1
@@ -167,13 +191,14 @@ build() {
     --disable-precomp-headers \
     --with-gtk=3 \
     --with-cxx=17 \
-    --with-libpng=builtin \
-    --with-libjpeg=builtin \
-    --with-libtiff=builtin \
-    --with-zlib=builtin \
     --with-expat=builtin \
+    --with-libjpeg=builtin \
+    --with-libpng=builtin \
+    --with-libtiff=builtin \
     --with-regex=builtin \
+    --with-zlib=builtin \
     --with-liblzma \
+    --with-winhttp \
     --without-opengl
 
   make #VERBOSE=1 -j1
@@ -203,13 +228,16 @@ build() {
     --with-msw \
     --with-cxx=17 \
     --with-opengl \
-    --with-libpng=sys \
-    --with-libjpeg=sys \
-    --with-libtiff=sys \
-    --with-zlib=sys \
     --with-expat=sys \
-    --with-regex=builtin \
-    --with-liblzma
+    --with-libjpeg=sys \
+    --with-libnotify=sys \
+    --with-libpng=sys \
+    --with-libtiff=sys \
+    --with-regex=sys \
+    --with-zlib=sys \
+    --with-libcurl \
+    --with-liblzma \
+    --with-winhttp
 
   make #VERBOSE=1
 
@@ -236,13 +264,14 @@ build() {
     --with-msw \
     --with-cxx=17 \
     --with-opengl \
-    --with-libpng=builtin \
+    --with-expat=builtin \
     --with-libjpeg=builtin \
+    --with-libpng=builtin \
+    --with-regex=builtin \
     --with-libtiff=builtin \
     --with-zlib=builtin \
-    --with-expat=builtin \
-    --with-regex=builtin \
-    --with-liblzma
+    --with-liblzma \
+    --with-winhttp
 
   make #VERBOSE=1 -j1
 
@@ -262,9 +291,12 @@ check() {
 package_wxwidgets3.2-common-libs() {
   pkgdesc="wxBase shared libraries for wxwidgets ${_wx_basever} (mingw-w64)"
   conflicts=("${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-base-libs")
-  depends=("${MINGW_PACKAGE_PREFIX}-expat"
+  depends=("${MINGW_PACKAGE_PREFIX}-curl"
+           "${MINGW_PACKAGE_PREFIX}-expat"
+           "${MINGW_PACKAGE_PREFIX}-gcc-libs"
            "${MINGW_PACKAGE_PREFIX}-pcre2"
-           "${MINGW_PACKAGE_PREFIX}-libsecret")
+           "${MINGW_PACKAGE_PREFIX}-xz"
+           "${MINGW_PACKAGE_PREFIX}-zlib")
 
   mkdir -p ${pkgdir}${MINGW_PREFIX}/bin
   cp -a ${srcdir}/install-msw-${MSYSTEM}-shared${MINGW_PREFIX}/bin/*.dll ${pkgdir}${MINGW_PREFIX}/bin/
@@ -332,10 +364,11 @@ package_wxwidgets3.2-msw() {
 
 package_wxwidgets3.2-msw-libs() {
   pkgdesc="wxMSW shared libraries for wxwidgets ${_wx_basever} (mingw-w64)"
-  depends=("${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-common-libs"
-           "${MINGW_PACKAGE_PREFIX}-libpng"
+  depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
            "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
-           "${MINGW_PACKAGE_PREFIX}-libtiff")
+           "${MINGW_PACKAGE_PREFIX}-libpng"
+           "${MINGW_PACKAGE_PREFIX}-libtiff"
+           "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-common-libs")
 
   mkdir -p ${pkgdir}${MINGW_PREFIX}/bin
   cp -a ${srcdir}/install-msw-${MSYSTEM}-shared${MINGW_PREFIX}/bin/*.dll ${pkgdir}${MINGW_PREFIX}/bin/
@@ -374,9 +407,20 @@ package_wxwidgets3.2-gtk3() {
 
 package_wxwidgets3.2-gtk3-libs() {
   pkgdesc="GTK+3 implementated shared libraries for wxwidgets ${_wx_basever} (mingw-w64)"
-  depends=("${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-common-libs"
+  depends=("${MINGW_PACKAGE_PREFIX}-cairo"
+           "${MINGW_PACKAGE_PREFIX}-fontconfig"
+           "${MINGW_PACKAGE_PREFIX}-gcc-libs"
+           "${MINGW_PACKAGE_PREFIX}-gdk-pixbuf2"
+           "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
+           "${MINGW_PACKAGE_PREFIX}-glib2"
+           "${MINGW_PACKAGE_PREFIX}-gspell"
            "${MINGW_PACKAGE_PREFIX}-gtk3"
-           "${MINGW_PACKAGE_PREFIX}-libnotify")
+           "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
+           "${MINGW_PACKAGE_PREFIX}-libnotify"
+           "${MINGW_PACKAGE_PREFIX}-libpng"
+           "${MINGW_PACKAGE_PREFIX}-libtiff"
+           "${MINGW_PACKAGE_PREFIX}-pango"
+           "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-common-libs")
 
   mkdir -p ${pkgdir}${MINGW_PREFIX}/bin
   cp -a ${srcdir}/install-gtk3-${MSYSTEM}-shared${MINGW_PREFIX}/bin/*.dll ${pkgdir}${MINGW_PREFIX}/bin/
