--- a/mingw-w64-pygobject2/PKGBUILD
+++ b/mingw-w64-pygobject2/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.28.7
 pkgrel=5
 pkgdesc="Allows you to load glade interface files in a program at runtime (mingw-w64)"
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64')
 url="https://pygobject.readthedocs.io/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-python2"
