--- a/mingw-w64-mdcat/PKGBUILD
+++ b/mingw-w64-mdcat/PKGBUILD
@@ -3,17 +3,18 @@
 _realname=mdcat
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.6.1
+pkgver=2.7.0
 pkgrel=1
 pkgdesc="Fancy cat for Markdown (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64' 'mingw64')
 url='https://github.com/swsnr/mdcat'
 license=('spdx:MPL-2.0')
+depends=("${MINGW_PACKAGE_PREFIX}-curl")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 options=('!strip' '!lto')
 source=("${url}/archive/refs/tags/${_realname}-${pkgver}.tar.gz")
-sha256sums=('0dac8322b74d3eefc412ea13fca448aac43b257a3ff3e361d3343c6220a6618f')
+sha256sums=('e372a82291a139f95d77c12325a2f595f47f6d6b4c2de70e50ab2117e975734f')
 prepare() {
   cd "${_realname}-${_realname}-${pkgver}"
 
