zed: optdepend on mesonlsp only for non-clang environments

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -4,7 +4,7 @@ _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.162.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -35,8 +35,11 @@ options=('!lto')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
             "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: for a better C/C++ language support"
             "${MINGW_PACKAGE_PREFIX}-rust-analyzer: for a better Rust language support"
-            "${MINGW_PACKAGE_PREFIX}-ruff: for 'Ruff' extension"
-            "${MINGW_PACKAGE_PREFIX}-mesonlsp: for 'Meson' extension")
+            "${MINGW_PACKAGE_PREFIX}-ruff: for 'Ruff' extension")
+# mesonlsp isn't available in CLANG environments
+if [[ ${MSYSTEM} != CLANG* ]]; then
+  optdepends+=("${MINGW_PACKAGE_PREFIX}-mesonlsp: for 'Meson' extension")
+fi
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
