--- a/mingw-w64-libqalculate/PKGBUILD
+++ b/mingw-w64-libqalculate/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libqalculate
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=5.3.0
+pkgver=5.4.0
 pkgrel=1
 pkgdesc="Multi-purpose desktop calculator (mingw-w64)"
 arch=('any')
@@ -20,6 +20,7 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-libwinpthread"
   "${MINGW_PACKAGE_PREFIX}-libxml2"
   "${MINGW_PACKAGE_PREFIX}-mpfr"
+  "${MINGW_PACKAGE_PREFIX}-readline"
 )
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
@@ -28,7 +29,7 @@ makedepends=(
   "intltool"
 )
 source=("https://github.com/Qalculate/libqalculate/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('61dd60b1d43ad3d2944cff9b2f45c9bc646c5a849c621133ef07231e8289e35b')
+sha256sums=('1fe956877ff1bbb1f4b470c41cdf3d971cebbeda6a35e92282f0eea5193ac343')
 
 prepare() {
   cd "${_realname}-${pkgver}"
