--- a/mingw-w64-msmtp/PKGBUILD
+++ b/mingw-w64-msmtp/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=msmtp
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.8.23
+pkgver=1.8.27
 pkgrel=1
 pkgdesc="An SMTP client (mingw-w64)"
 arch=('any')
@@ -16,39 +16,53 @@ msys2_references=(
   "cpe: cpe:2.3:a:martin_lambers:msmtp"
 )
 license=('spdx:GPL-3.0-or-later')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
-depends=("${MINGW_PACKAGE_PREFIX}-gettext"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-gettext-tools"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf")
+depends=("${MINGW_PACKAGE_PREFIX}-gettext-runtime"
          "${MINGW_PACKAGE_PREFIX}-gnutls"
          "${MINGW_PACKAGE_PREFIX}-gsasl"
          "${MINGW_PACKAGE_PREFIX}-libsecret"
          "${MINGW_PACKAGE_PREFIX}-libidn2"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread")
-source=(https://marlam.de/msmtp/releases/${_realname}-${pkgver}.tar.xz{,.sig})
-sha256sums=('cf04c16b099b3d414db4b5b93fc5ed9d46aad564c81a352aa107a33964c356b8'
-            'SKIP')
+source=(https://marlam.de/msmtp/releases/${_realname}-${pkgver}.tar.xz{,.sig}
+        https://github.com/marlam/msmtp/commit/09f413a6d053b160cd62441c2e4f07ca78352241.patch
+        001-config-file-location.patch
+        002-net-socket-fix.patch)
+sha256sums=('94030580a63a747faa0a3b9b1b264ae355aad33a4d94b832bfeb5b21633c965e'
+            'SKIP'
+            '67030d935ebbc420cdc96dafe50bedf9633079d488a13381fff2fedf059dfc0c'
+            '490aa84627c8696ccbcca7257ca7d74cdc22e96953aca654d938bf325f1e3408'
+            '605c24bc891a6c1da68500067d4055ef8ddc41b8880489a677572026defedbc2')
 validpgpkeys=('2F61B4828BBA779AECB3F32703A2A4AB1E32FD34') # Martin Lambers <marlam@marlam.de>
 
 prepare () {
-  cd ${srcdir}/${_realname}-${pkgver}
+  cd ${_realname}-${pkgver}
+  patch -p1 < ../001-config-file-location.patch
+  patch -p1 < ../002-net-socket-fix.patch
 
+  # backport NLS fixes from upstream
+  patch -p1 < ../09f413a6d053b160cd62441c2e4f07ca78352241.patch
+
+  autoreconf -fi
 }
 
 build() {
-  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
+  mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
-  LDFLAGS+=" -lpthread" \
+  LIBS=" -lpthread -lshlwapi" \
   ../${_realname}-${pkgver}/configure \
+    --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
-    --host=${MINGW_CHOST} \
-    --prefix=${MINGW_PREFIX}
+    --with-libgsasl
 
-  sed -i 's/-R\/mingw..\/lib//' src/Makefile
-  touch ${srcdir}/${_realname}-${pkgver}/src/*.c
   make
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
+  cd build-${MSYSTEM}
   make DESTDIR="${pkgdir}" install
+
   install -Dm0644 ${srcdir}/${_realname}-${pkgver}/COPYING ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
