--- a/mingw-w64-gnuradio/PKGBUILD
+++ b/mingw-w64-gnuradio/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gnuradio
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=3.10.11.0
-pkgrel=9
+pkgrel=10
 pkgdesc="General purpose DSP and SDR toolkit (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -71,6 +71,7 @@ options=('!strip')
 source=("https://github.com/${_realname}/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "https://github.com/gnuradio/gnuradio/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz.asc"
         0001-cmake-Install-python-wrapper-exe-for-scripts-on-Wind.patch
+        https://github.com/gnuradio/gnuradio/commit/16ef847807553d65b80666b238643794b0b93d71.patch
         numpy-2.0.patch
         gnuradio-blocks-and-examples-path.hook.in
         gnuradio-blocks-and-examples-path.script.in
@@ -83,6 +84,7 @@ validpgpkeys=(
 sha256sums=('9ca658e6c4af9cfe144770757b34ab0edd23f6dcfaa6c5c46a7546233e5ecd29'
             'SKIP'
             'aa9c79f6ab923c566f57d90117fa7e82549c26230538ffb3a2b1c0246fc31c19'
+            '05f60071b421d9bd30cc4744dbaa035581c77dd03e8da94c12083fa619be3868'
             'e3a2d9f63318b56f87829d224232724d9c815b46c6c7086ac3c5b6ae8980bc7b'
             'b2f014a69b32afcb207e4d2e8e163fc04968594d7d4c3184b9ea5c8cf2a29329'
             'caa9a6cc253d508abcd01545f26b46df0d708d24f69b7dc59183d631872721ed'
@@ -94,6 +96,7 @@ prepare() {
   # Patch number 0001 is credited to Ryan Volz <ryan.volz@gmail.com> and licensed under the 
   # BSD-3-Clause license
   patch -Np1 -i "${srcdir}/0001-cmake-Install-python-wrapper-exe-for-scripts-on-Wind.patch"
+  patch -Np1 -i "${srcdir}/16ef847807553d65b80666b238643794b0b93d71.patch"
   patch -Np1 -i "${srcdir}/numpy-2.0.patch"
 }
 
