libvmime: update to r1282

--- a/mingw-w64-libvmime-git/PKGBUILD
+++ b/mingw-w64-libvmime-git/PKGBUILD
@@ -5,10 +5,10 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=r1270.d03ad5f0
-_commit=d03ad5f0f6d3b2d54009ccdc7d1f7670218b263c
+pkgver=r1282.43b262bd
+_commit=43b262bd8c79fbaadc9522eaa04a40427782e0c6
 pkgrel=1
-pkgdesc="An open source solution for working with MIME messages and Internet messaging services like IMAP, POP or SMTP (mingw-w64)"
+pkgdesc="A MIME messages and Internet messaging services like IMAP, POP or SMTP (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url="https://www.vmime.org/"
@@ -19,20 +19,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-iconv"
+             "${MINGW_PACKAGE_PREFIX}-icu"
              "${MINGW_PACKAGE_PREFIX}-doxygen"
              "git")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gnutls"
          "${MINGW_PACKAGE_PREFIX}-gsasl"
          "${MINGW_PACKAGE_PREFIX}-libiconv"
-         #"${MINGW_PACKAGE_PREFIX}-openssl"
-        )
+         "${MINGW_PACKAGE_PREFIX}-openssl")
 source=("${_realname}"::"git+https://github.com/kisli/vmime.git#commit=$_commit"
-        cmake_mlang.patch
-        002-set-cxx-std-17.patch)
+        001-define-missing-guid.patch)
 sha256sums=('SKIP'
-            '43f137580cade0322aa1c36c1fdea37b2a2b805839c56d935826f9153bfcbbfa'
-            '685e89cbcba29222d2958ff2f1fc76eb43f22232fb3b6515e8bb7bbf231188ff')
+            '5b938d4a569bc2e2a41ec692ced5dceebce8afc14e9908e972e1bf36c61a0053')
 
 pkgver() {
   cd "${srcdir}/${_realname}"
@@ -41,13 +39,10 @@ pkgver() {
 
 prepare() {
   cd "${_realname}"
-  patch -p1 -i ${srcdir}/cmake_mlang.patch
-  # patch -p1 -i ${srcdir}/002-set-cxx-std-17.patch
+  patch -p1 -i ${srcdir}/001-define-missing-guid.patch
 }
 
 build() {
-  mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
-
   declare -a _extra_config
   if check_option "debug" "n"; then
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
@@ -55,10 +50,9 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  LDFLAGS+=" -Wl,--export-all-symbols"
-
+  CXXFLAGS+=" -Wno-old-style-cast" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake \
+  cmake -Wno-dev \
     -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     "${_extra_config[@]}" \
@@ -66,13 +60,14 @@ build() {
     -DVMIME_BUILD_SAMPLES=OFF \
     -DVMIME_TLS_SUPPORT_LIB=gnutls \
     -DVMIME_CHARSETCONV_LIB=iconv \
-    ../${_realname}
+    -S ${_realname} \
+    -B build-${MSYSTEM}
 
-  ${MINGW_PREFIX}/bin/cmake --build .
+  cmake --build build-${MSYSTEM}
 }
 
 package() {
-  cd build-${MSYSTEM}
-  DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install .
-  install -Dm644 "${srcdir}"/${_realname}/COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  DESTDIR=${pkgdir} cmake --install build-${MSYSTEM}
+
+  install -Dm644 "${_realname}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
