mingw-w64: Update to c0313ec338

--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=crt
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r387.gcf5c50cce
+pkgver=12.0.0.r406.gc0313ec33
 pkgrel=1
-_commit='cf5c50cce0b4f8610eafd95443d1d3767de386a5'
+_commit='c0313ec3381521db6c5e3aca746ff1e3e29208d7'
 pkgdesc='MinGW-w64 CRT for Windows (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -22,7 +22,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('9336193b835601cb8309244f4415312905dbe311390bb082978857e235130d05')
+sha256sums=('b482575dd7b51ce3400c1bdc227075b7bbb0becd3279165244493dd07ef384c4')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
