premake: Update to 5.0beta3
Fixes #22653

--- a/mingw-w64-premake/PKGBUILD
+++ b/mingw-w64-premake/PKGBUILD
@@ -4,17 +4,18 @@
 _realname=premake
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=5.0beta2
-_realver=5.0.0-beta2
+pkgver=5.0beta3
+_realver=5.0.0-beta3
 pkgrel=1
 pkgdesc="A simple build configuration and project generation tool (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
 url="https://premake.github.io/"
+msys2_repository_url="https://github.com/premake/premake-core"
 license=('spdx:BSD-3-Clause')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/premake/premake-core/archive/v${_realver}.tar.gz")
-sha256sums=('84a7775fe0a90c0f649eb18b10779b84626ad8c58dea4a8f24cca83690dd47d4')
+sha256sums=('c2512cdf9563bc6d5539606480c03f4cd243eddd96d267e4604e0db379d3e995')
 
 prepare() {
   rm -rf "build-${MSYSTEM}"
