--- a/mingw-w64-turbo/PKGBUILD
+++ b/mingw-w64-turbo/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=turbo
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.3.1
+pkgver=2.3.3
 pkgrel=1
 pkgdesc="Incremental bundler and build system optimized for JavaScript and TypeScript (mingw-w64)"
 arch=('any')
@@ -25,7 +25,7 @@ options=('!strip')
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.10+zstd.1.5.6/download"
         "zstd-sys-remove-statik.patch")
-sha256sums=('2625eb171645ad8c9ee859e1bb73352dabc33b51ecb65295894c2aea587aaf2f'
+sha256sums=('872983f15cb05e059774d3cc56a940dd869eb254f743ec02e9c216ebb3c947a6'
             'c253a4914af5bafc8fa8c86ee400827e83cf6ec01195ec1f1ed8441bf00d65aa'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
@@ -40,7 +40,7 @@ zstd-sys = { path = "../zstd-sys-2.0.10+zstd.1.5.6" }
 END
 
   rm rust-toolchain.toml
-  cargo update -p zstd-sys -p psm
+  cargo update -p zstd-sys
   RUSTC_BOOTSTRAP=1 cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
