scc: update to 3.4.0

--- a/mingw-w64-scc/PKGBUILD
+++ b/mingw-w64-scc/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=scc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.2.0
+pkgver=3.4.0
 pkgrel=1
 pkgdesc='Sloc, Cloc and Code: a very fast accurate code counter with complexity calculations and COCOMO estimates written in pure Go (mingw-w64)'
 arch=(any)
@@ -18,16 +18,13 @@ makedepends=(
   "$MINGW_PACKAGE_PREFIX-gcc"
 )
 options=('!strip')
-source=("https://github.com/boyter/scc/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        https://github.com/boyter/scc/commit/e1519e0a9feb11b92012f29736a7feb81ea066f5.patch)
+source=("https://github.com/boyter/scc/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 noextract=("${_realname}-${pkgver}.tar.gz")
-sha256sums=('69cce0b57e66c736169bd07943cdbe70891bc2ff3ada1f4482acbd1335adbfad'
-            '10eaecd3e32e9cb4b145351f2c7e77d200ed0ea710bd8d35686a7791e23ef83d')
+sha256sums=('bdedb6f32d1c3d73ac7e55780021c742bc8ed32f6fb878ee3e419f9acc76bdaa')
 
-prepare(){
+prepare() {
   tar -xf "${_realname}-${pkgver}.tar.gz" || true
   cd "$_realname-$pkgver"
-  patch -p1 -i "${srcdir}/e1519e0a9feb11b92012f29736a7feb81ea066f5.patch"
   mkdir -p build/
 }
 
