--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.162.5
-pkgrel=2
+pkgver=0.163.2
+pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -44,12 +44,12 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
         "zstd-sys-remove-statik.patch"
-        "zed-set-create-no-window.patch")
-sha256sums=('819778830489fbea7ff911e06b870e13d7794b36240c5c75807752a7e707eb22'
+        "zed-set-create-no-window.patch::https://github.com/zed-industries/zed/commit/95ace0370672b4784821648887d57a95bf974291.patch")
+sha256sums=('69ff0c4520986a976f4a67905395e9e65eb950d76e36a00a071b3f731b65603c'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
-            'c27cc1246dd6711d3c41dac95406108bf9c932631ae46a9c34b10a943918dff9')
+            'a3243f356c0608bdec190fb4c508cb8268f866e8ff1208951dfd6b24e04c75f1')
 
 prepare() {
   cd "${_realname}"
