wasm-bindgen: update lockfile closes https://github.com/msys2/MINGW-packages/security/dependabot/4

--- a/mingw-w64-wasm-bindgen/PKGBUILD
+++ b/mingw-w64-wasm-bindgen/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=0.2.95
-pkgrel=2
+pkgrel=3
 pkgdesc="Facilitating high-level interactions between Wasm modules and JavaScript (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,14 +20,14 @@ source=("git+${url}.git#tag=${pkgver}"
         "Cargo.lock")
 sha256sums=('40cbe12e00e253e86a262b5598e25021312bf19bb1151f51a58cd0bb59b3936e'
             '0a96c55cb3ed65a958aeaadca093b25c6725b166e9c5a85b635a0e3d76d5f533'
-            '161e1ca7cfc82c1d3ea48c8318a95cb283b0995448436ed420be2c0520c8bc72')
+            '2b40187769cb38459cb35e07d7093b9e0c6efe40512b50abe9c9fa6ad53fbda9')
 
 prepare() {
   cd "${_realname}"
 
   # https://github.com/rustwasm/wasm-bindgen/issues/1819
   cp ../Cargo.lock .
-  # update image crate to remove security alert
+  # update image crate to fix security alert
   sed -i 's|^image = "0\.12\.3"$|image = "0.25"|' ../raytracer/Cargo.toml
   cat >> Cargo.toml <<END
 
